--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,19 @@
   <groupId>br.com.wendelsegadilha</groupId>
   <artifactId>kafka-produtores-consumidores</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <name>kafka-produtores-consumidores</name>
   <url>http://maven.apache.org</url>
+    <modules>
+        <module>service-email</module>
+      <module>service-log</module>
+      <module>service-new-order</module>
+      <module>service-fraud-detector</module>
+      <module>common-kafka</module>
+    </modules>
 
-  <properties>
+    <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.target>21</maven.compiler.target>
     <maven.compiler.source>21</maven.compiler.source>
