criado servico HTTP

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
       <module>service-fraud-detector</module>
       <module>common-kafka</module>
         <module>service-users</module>
+        <module>service-http-ecommerce</module>
     </modules>
 
     <properties>
